# ai-marketer

./: .env.example  .flake8  .gitignore  CLAUDE.md  GEMINI.md  README.md  app.py  cdk.json  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: lint.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  copilot.manifest.json  gemini.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
cdk/: stack.py
scripts/: sync-layer.sh
scripts/python/: health-check-ingestion.py  test-ingestion-pipeline.py  test-telegram-alert.py
specs/001-phase1-foundation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-phase1-foundation/checklists/: requirements.md
specs/001-phase1-foundation/contracts/: budget-alert-telegram-pipeline.md  parameter-store-interface.md
specs/002-content-ingestion-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-content-ingestion-pipeline/checklists/: requirements.md
src/common/: config.py  error_handlers.py  schemas.py  utils.py
src/lambdas/ingestion/: apify_actor_client.py  apify_client.py  (+7 more)
tests/fixtures/: sample_data.json
tests/unit/: test_apify_client.py  test_cdk_stack.py  test_claude_caption_generator.py  test_deduplication.py  test_error_handlers.py  test_image_processor.py  test_lambda_ingestion_metrics.py  test_lambda_notifier.py
vault/: plan.md
vault/phase1/: Niche-selected.md  tech-spec.md  week1.md
(+10 files in other folders)
